# gr

./: .cf-studio-kit.toml  .codacy.yml  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  dylint.toml  release-plz.toml
.cf-studio/: version.toml  whatsnew.toml
.cf-studio/config/: AGENTS.md  artifacts.toml  change-impact-analysis.toml  core.toml
.clusterfuzzlite/: Dockerfile  build.sh
.cursor/commands/: modkit-pr-review.md
.cypilot/.core/: whatsnew.toml
.cypilot/.gen/: AGENTS.md
.cypilot/config/: AGENTS.md  artifacts.toml  core.toml  pr-review.toml
.devin/workflows/: toolkit-pr-review.md
.github/: copilot-instructions.md
.github/workflows/: cfs.yml  ci.yml  e2e.yml  pr-dashboard.yml  release-plz.yml
apps/cf-gears-example-server/: Cargo.toml
apps/cyberware-example-server/: Cargo.toml
config/: e2e-local.yaml  e2e-scope-enforcement.yaml  e2e-tr-authz.yaml  mini-chat.yaml  no-auth.yaml  no-db.yaml  oop-example-follower.yaml  oop-example-master+follower.yaml  oop-example-master.yaml  quickstart-windows.yaml  quickstart.yaml  server.yaml  static-tenants.yaml
docs/: ARCHITECTURE_MANIFEST.md  GEARS.md  MODKIT_PLUGINS.md  MODULES.md  QUICKSTART_GUIDE.md  RELEASING.md  REPO_PLAYBOOK.md  TESTING.md  TOOLKIT_PLUGINS.md  TRACING_SETUP.md
docs/api/: api.json
docs/checklists/: ADR.md  CODING.md  DESIGN.md  FEATURE.md  PRD.md  README.md
docs/modkit_unified_system/: 02_module_layout_and_sdk_pattern.md  06_authn_authz_secure_orm.md  11_database_patterns.md  13_e2e_testing.md
docs/pr-review/: README.md  code-review-template.md  modkit-framework-compliance-review.md  toolkit-framework-compliance-review.md  toolkit-rust-review.md
docs/security/: SECURITY.md
docs/spec-templates/: README.md
docs/toolkit_unified_system/: 01_overview.md  02_module_layout_and_sdk_pattern.md  03_clienthub_and_plugins.md  04_rest_operation_builder.md  05_errors_rfc9457.md  06_authn_authz_secure_orm.md  07_odata_pagination_select_filter.md  08_lifecycle_stateful_tasks.md  09_oop_grpc_sdk_pattern.md  10_checklists_and_templates.md  11_database_patterns.md  12_unit_testing.md  13_e2e_testing.md  README.md
examples/cf-gears-fips-probe/: Cargo.toml  README.md
examples/cf-gears-fips-probe/src/: main.rs
examples/oop-modules/: README.md
examples/toolkit/: lifecycle_example.rs  type_safe_api_builder.rs
examples/toolkit/users-info/users-info-server/: Cargo.toml
examples/toolkit/users-info/users-info-server/src/: main.rs  registered_modules.rs
gears/credstore/: QUICKSTART.md
gears/file-parser/: Cargo.toml  QUICKSTART.md  README.md
gears/file-storage/: README.md
gears/mini-chat/: README.md
guidelines/: DEPENDENCIES.md  GTS.md  README.md  SECURITY.md
libs/: .clippy.toml
libs/modkit/: Cargo.toml  README.md
libs/modkit-auth/: Cargo.toml  README.md
libs/modkit-canonical-errors/: Cargo.toml  README.md
libs/modkit-canonical-errors-macro/: Cargo.toml
libs/modkit-db/: Cargo.toml  README.md
libs/modkit-db-macros/: Cargo.toml  README.md
libs/modkit-errors/: Cargo.toml  README.md
libs/modkit-errors-macro/: Cargo.toml  README.md
libs/modkit-gts/: Cargo.toml
libs/modkit-gts-macro/: Cargo.toml
libs/modkit-http/: Cargo.toml
libs/modkit-macros/: Cargo.toml  README.md
libs/modkit-macros-tests/: Cargo.toml
libs/modkit-node-info/: Cargo.toml  README.md
libs/modkit-odata/: Cargo.toml  README.md
libs/modkit-odata-macros/: Cargo.toml
libs/modkit-sdk/: Cargo.toml
libs/modkit-security/: Cargo.toml  README.md
libs/modkit-transport-grpc/: Cargo.toml  README.md
libs/modkit-utils/: Cargo.toml  README.md
libs/rustls-corecrypto-provider/: Cargo.toml  README.md
libs/rustls-fips-shim/: Cargo.toml
libs/system-sdks/: Cargo.toml  README.md
libs/system-sdks/sdks/directory/: Cargo.toml  README.md
libs/system-sdks/sdks/directory/src/grpc/: client.rs
libs/toolkit/: Cargo.toml  README.md
libs/toolkit-auth/: Cargo.toml  README.md
libs/toolkit-canonical-errors/: Cargo.toml  README.md
libs/toolkit-canonical-errors-macro/: Cargo.toml
libs/toolkit-db/: Cargo.toml  README.md
libs/toolkit-db-macros/: Cargo.toml  README.md
libs/toolkit-gts/: Cargo.toml  README.md
libs/toolkit-gts-macros/: Cargo.toml  README.md
libs/toolkit-http/: Cargo.toml  README.md
libs/toolkit-macros/: Cargo.toml  README.md
libs/toolkit-macros-tests/: Cargo.toml
libs/toolkit-node-info/: Cargo.toml  README.md
libs/toolkit-node-info/src/: model.rs
libs/toolkit-odata/: Cargo.toml  README.md
libs/toolkit-odata-macros/: Cargo.toml  README.md
libs/toolkit-sdk/: Cargo.toml  README.md
libs/toolkit-security/: Cargo.toml  README.md
libs/toolkit-transport-grpc/: Cargo.toml  README.md
libs/toolkit-utils/: Cargo.toml  README.md
libs/toolkit-utils/src/: humantime_serde.rs  var_expand.rs
modules/credstore/plugins/static-credstore-plugin/: Cargo.toml  README.md
modules/file-parser/: Cargo.toml  QUICKSTART.md  README.md
modules/file-storage/: README.md
modules/mini-chat/: README.md
modules/system/authn-resolver/authn-resolver/: Cargo.toml  README.md
modules/system/authz-resolver/authz-resolver-sdk/: Cargo.toml  README.md
modules/system/authz-resolver/plugins/tr-authz-plugin/: Cargo.toml
modules/system/authz-resolver/plugins/tr-authz-plugin/src/domain/: service.rs
modules/system/module-orchestrator/: Cargo.toml  README.md
modules/system/module-orchestrator/src/api/rest/: handlers.rs
modules/system/nodes-registry/nodes-registry/: Cargo.toml  README.md
modules/system/nodes-registry/nodes-registry/src/: lib.rs
modules/system/nodes-registry/nodes-registry/src/api/rest/: error.rs  handlers.rs
modules/system/nodes-registry/nodes-registry/tests/: error_tests.rs
modules/system/tenant-resolver/plugins/rg-tr-plugin/: Cargo.toml
modules/system/tenant-resolver/plugins/static-tr-plugin/: Cargo.toml
studio-kit-gears/: AGENTS.md  README.md  SKILL.md
studio-kit-gears/scripts/: pr.py
studio-kit-gears/workflows/: coding.md  decompose.md  doc-adr.md  doc-prd.md  (+6 more)
(+1801 files in other folders)
