[package]
name = "cyberware-system-sdks"
version = "0.1.35"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Collection of system modules SDKs"
readme = "README.md"
rust-version.workspace = true
keywords = ["cyberfabric", "cyberware", "cyberware-system"]
categories = ["development-tools"]

[lib]
name = "cf_system_sdks"

[lints]
workspace = true

[features]
directory = ["dep:cyberware-system-sdk-directory"]
directory_grpc = ["directory", "cyberware-system-sdk-directory?/grpc"]


[dependencies]
cyberware-system-sdk-directory = { workspace = true, optional = true }

