[package]
name = "cf-gears-toolkit-node-info"
version = "0.6.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit node info library"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "toolkit_node_info"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
hostname = { workspace = true }
starship-battery = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
uuid = { workspace = true, features = ["v4", "v5"] }
local-ip-address = { workspace = true }
machine-uid = { workspace = true }
tracing = { workspace = true }
nvml-wrapper = { workspace = true }
