[package]
name = "cf-gears-toolkit-utils"
version = "0.6.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit utils library"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "toolkit_utils"

[lints]
workspace = true

[features]
serde = ["dep:serde"]
humantime-serde = ["serde", "dep:humantime"]

[dependencies]
serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
secrecy = { workspace = true }
regex = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
temp-env = { workspace = true }
