[package]
name = "users-info-server"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Standalone server binary for the users-info example module"

[lints]
workspace = true

[features]
default = []
# FIPS-140-3: enable FIPS-validated crypto provider in transitive TLS deps
fips = ["toolkit/fips"]

[dependencies]
# ToolKit bootstrap (host mode)
toolkit = { workspace = true, features = ["bootstrap"] }

# System gears (minimum set for users-info)
api_gateway = { package = "cf-gears-api-gateway", path = "../../../../gears/system/api-gateway" }
grpc_hub = { package = "cf-gears-grpc-hub", path = "../../../../gears/system/grpc-hub" }
types_registry = { package = "cf-gears-types-registry", path = "../../../../gears/system/types-registry/types-registry" }
authn-resolver = { package = "cf-gears-authn-resolver", path = "../../../../gears/system/authn-resolver/authn-resolver" }
authz-resolver = { package = "cf-gears-authz-resolver", path = "../../../../gears/system/authz-resolver/authz-resolver" }
tenant-resolver = { package = "cf-gears-tenant-resolver", path = "../../../../gears/system/tenant-resolver/tenant-resolver" }

# Static plugins for standalone operation
static-authn-plugin = { package = "cf-gears-static-authn-plugin", path = "../../../../gears/system/authn-resolver/plugins/static-authn-plugin" }
static-authz-plugin = { package = "cf-gears-static-authz-plugin", path = "../../../../gears/system/authz-resolver/plugins/static-authz-plugin" }
single-tenant-tr-plugin = { package = "cf-gears-single-tenant-tr-plugin", path = "../../../../gears/system/tenant-resolver/plugins/single-tenant-tr-plugin" }

# Target module
users-info = { path = "../users-info", default-features = true }

# Runtime dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
