[package]
name = "cyberware-static-credstore-plugin"
version = "0.1.18"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CredStore plugin with static secret mapping for development and testing"
repository.workspace = true
keywords = ["cyberfabric", "cyberware", "cyberfabric-module"]

[lib]
name = "static_credstore_plugin"

[lints]
workspace = true

[dependencies]
# Local dependencies
credstore-sdk = { package = "cyberware-credstore-sdk", version = "0.1.24", path = "../../credstore-sdk" }
types-registry-sdk = { package = "cyberware-types-registry-sdk", version = "0.2.2", path = "../../../system/types-registry/types-registry-sdk" }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Data structures
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Required by modkit::module macro
inventory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde-saphyr = { workspace = true }
