[package]
name = "cyberware-authn-resolver"
version = "0.2.16"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AuthN resolver module - discovers and routes to plugins"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberware", "cyberfabric-system"]
categories = ["authentication"]

[lib]
name = "authn_resolver"

[lints]
workspace = true

[dependencies]
# Local dependencies
authn-resolver-sdk = { package = "cyberware-authn-resolver-sdk", version = "0.3.16", path = "../authn-resolver-sdk" }
types-registry-sdk = { package = "cyberware-types-registry-sdk", version = "0.2.2", path = "../../types-registry/types-registry-sdk" }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Data types
uuid = { workspace = true }

# Error handling and serialization
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Required by modkit::module macro
inventory = { workspace = true }

# Logging
tracing = { workspace = true }
