[package]
name = "cyberware-nodes-registry"
version = "0.1.25"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nodes registry module"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberware", "cyberfabric-system"]
categories = ["development-tools"]

[lib]
name = "nodes_registry"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
thiserror = { workspace = true }

modkit = { workspace = true }
modkit-canonical-errors = { workspace = true, features = ["axum"] }
modkit-node-info = { workspace = true }
modkit-macros = { workspace = true }
nodes_registry-sdk = { package = "cyberware-nodes-registry-sdk", version = "0.1.21", path = "../nodes-registry-sdk" }
