[package]
name = "cyberware-tr-authz-plugin"
version = "0.1.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AuthZ resolver plugin with tenant hierarchy resolution via Tenant Resolver"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberware", "cyberfabric-system", "authorization"]
categories = ["authentication"]

[lib]
name = "tr_authz_plugin"

[lints]
workspace = true

[dependencies]
# Local dependencies
authz-resolver-sdk = { package = "cyberware-authz-resolver-sdk", version = "0.3.6", path = "../../authz-resolver-sdk" }
tenant-resolver-sdk = { package = "cyberware-tenant-resolver-sdk", version = "0.3.6", path = "../../../tenant-resolver/tenant-resolver-sdk" }
types-registry-sdk = { package = "cyberware-types-registry-sdk", version = "0.2.2", path = "../../../types-registry/types-registry-sdk" }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Data structures
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Required by modkit::module macro
inventory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
