[package]
name = "cyberware-static-tr-plugin"
version = "0.1.21"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tenant resolver plugin with static config-based tenant data and access rules"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberware", "cyberfabric-system"]
categories = ["web-programming"]

[lib]
name = "static_tr_plugin"

[lints]
workspace = true

[dependencies]
# Local dependencies
tenant-resolver-sdk = { package = "cyberware-tenant-resolver-sdk", version = "0.3.6", path = "../../tenant-resolver-sdk" }
types-registry-sdk = { package = "cyberware-types-registry-sdk", version = "0.2.2", path = "../../../types-registry/types-registry-sdk" }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }
modkit-odata = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Data structures
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Required by modkit::module macro
inventory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
